k8sgpt-operator/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: ollama
spec:
  containers:
  - name: test
    image: curlimages/curl
    command: ["sh", "-c", "curl http://ollama.ollama.svc.cluster.local:11434/v1/models && sleep 60"]
  tolerations:
  - key: "node-role.kubernetes.io/master"
    operator: "Exists"
    effect: "NoSchedule"
