k8sgpt-operator/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sgpt-web
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8sgpt-web
  template:
    metadata:
      labels:
        app: k8sgpt-web
    spec:
      imagePullSecrets:
      - name: gitlab-registry-secret
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: k8sgpt-web
        image: registry.gitlab.com/progressive-mind-infra/chimera/k8sgptinterface:latest1
        ports:
        - containerPort: 7860
        volumeMounts:
        - name: kubeconfig
          mountPath: /root/.kube/config
          subPath: config
        resources:
          limits:
            cpu: "1"
            memory: "2Gi"
          requests:
            cpu: "0.5"
            memory: "1Gi"
      volumes:
      - name: kubeconfig
        secret:
          secretName: k8sgpt-web-kubeconfig
