k8sgpt-operator/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sgpt-web
  namespace: ollama
spec:
  selector:
    app: k8sgpt-web
  ports:
  - port: 80
    targetPort: 7860
  type: ClusterIP
