k8sgpt-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8sgpt-web
  namespace: ollama
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.pantherslabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8sgpt-web
            port:
              number: 80
  tls:
  - hosts:
    - dashboard.pantherslabs.com
    secretName: pantherslabs-tls
